Updating the .ipynb file

--- a/tf-idf.ipynb
+++ b/tf-idf.ipynb
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***We have to use pipelines as we can't predict strings using ML algorithms.***"
+    "***Alternatively, we can use pipelines to summarize our work.***"
    ]
   },
   {
