--- a/latent_dirichlet_allocation.ipynb
+++ b/latent_dirichlet_allocation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic Modelling using Latent Dirichlet Allocation in Scikit-Learn"
+    "# Topic Modeling using Latent Dirichlet Allocation in Scikit-Learn"
    ]
   },
   {
