Updating the .ipynb file

--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "{'Prediction': 'Positive'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
     "import requests\n",
     "\n",
     "url = 'http://127.0.0.1:5000/'\n",
-    "params = {'query': 'the character was really deep but the movie\"s great effects made it very good'}\n",
+    "params = {'query': 'i guess the movie was fine'}\n",
     "response = requests.get(url, params)\n",
     "response.json()"
    ]
